Fix spacing on error alerts

--- a/frontend/src/pages/UserSettings/Auth/Auth.module.scss
+++ b/frontend/src/pages/UserSettings/Auth/Auth.module.scss
@@ -1,5 +1,5 @@
 .error {
-	margin-bottom: var(--size-medium);
+	margin: var(--size-medium) 0;
 }
 
 .signInAlert {
